# Ifrit3D-MLX

./: .gitignore  LICENSE  README.md  app.py  hf_progress.py  main.py  pyproject.toml
examples/: debug_mtldiffrast_direct.py  debug_paint_stages.py  debug_render_mtl.py  inspect_glb_texture.py  render_textured_views.py  run_mps_paint_only.py  run_mps_shape_paint_custom.py  run_mps_shape_paint_demo.py
hy3d_mlx_comfyui/: README.md  nodes.py  requirements.txt
hy3d_mlx_comfyui/legal/: LICENSE
hy3dgen/: rembg.py
hy3dgen/shapegen/: pipelines.py  postprocessors.py
hy3dgen/texgen/: __init__.py  pipelines.py
hy3dgen/texgen/differentiable_renderer/: mesh_render.py  mesh_utils.py
hy3dgen/texgen/hunyuanpaint/: pipeline.py
hy3dgen/texgen/hunyuanpaintpbr/: pipeline.py
hy3dgen/texgen/hunyuanpaintpbr/unet/: model.py
hy3dgen/texgen/mlx/: attention.py  convert_weights.py  hybrid_unet.py  pipeline.py  transformer_block.py
hy3dgen/texgen/mlx/base/: config.py  unet.py
hy3dgen/texgen/utils/: dehighlight_utils.py  despeckle_utils.py  multiview_utils.py  realesrgan_utils.py  sdturbo_upscale_utils.py  subject_classifier.py  swift_paint_runner.py
outputs/: README.md
paint/2.0/: convert_mlx.py  gen.py  gen_mlx.py
paint/2.0/turbo/: convert_mlx.py  gen.py  gen_mlx.py
paint/2.1/: convert_mlx.py  gen.py  gen_mlx.py
scripts/: AppIcon.icns  Info.plist.template  build_app.sh  entitlements.plist  launcher.sh  make_dmg.sh  menubar_helper.py  sign_adhoc.sh  sign_and_notarize.sh
shape/: README.md  runner.py  swift_runner.py
shape/2.0/: gen.py
shape/2.0/turbo/: gen.py
shape/2.1/: gen.py
shape/mini/: gen.py
shape/mini/turbo/: gen.py
shape/mv/: gen.py
shape/mv/turbo/: gen.py
swift/: README.md
swift/patches/: 0001-local-modifications.patch
