[project]
name = "hunyuan3d-2-local"
version = "0.1.0"
description = "Stripped-down local Hunyuan3D-2 workspace focused on image-to-shape and mesh painting"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
  "accelerate",
  "diffusers",
  "einops",
  "numpy",
  "omegaconf",
  "onnxruntime",
  "opencv-python",
  "pillow",
  "pybind11",
  "pygltflib",
  "pymeshlab",
  "rembg",
  "torch",
  "torchvision",
  "tqdm>=4.66.3",
  "transformers>=4.48.0",
  "trimesh",
  "xatlas",
  "ninja",
  "mlx; platform_system == 'Darwin' and platform_machine == 'arm64'",
]

[tool.uv.extra-build-dependencies]
mtldiffrast = ["torch", "ninja", "setuptools"]
mtlbvh = ["torch", "ninja", "setuptools"]
mtlmesh = ["torch", "ninja", "setuptools"]
mtlgemm = ["torch", "ninja", "setuptools"]

[tool.uv]
package = false
